Update installer URL

--- a/manifests/0/0xJacky/nginx-ui/2.1.9/0xJacky.nginx-ui.locale.en-US.yaml
+++ b/manifests/0/0xJacky/nginx-ui/2.1.9/0xJacky.nginx-ui.locale.en-US.yaml
@@ -7,7 +7,7 @@ PackageLocale: en-US
 Publisher: 0xJacky
 PublisherUrl: https://github.com/0xJacky
 Author: 0xJacky
-PackageName: komac
+PackageName: nginx-ui
 PackageUrl: https://nginxui.com/
 License: GPL-3.0
 LicenseUrl: https://github.com/0xJacky/nginx-ui/blob/dev/LICENSE
