--- a/manifests/0/0xJacky/nginx-ui/2.1.9/0xJacky.nginx-ui.installer.yaml
+++ b/manifests/0/0xJacky/nginx-ui/2.1.9/0xJacky.nginx-ui.installer.yaml
@@ -12,7 +12,7 @@ UpgradeBehavior: install
 ReleaseDate: 2025-06-28
 Installers:
 - Architecture: x64
-  InstallerUrl: https://github.com/russellbanks/Komac/releases/download/v2.12.1/komac-2.12.1-x86_64-pc-windows-msvc.exe
-  InstallerSha256: 09A95055FFAA702643ADF5139E24B793828DD8ED591971D80E9DA5D23148E106
+  InstallerUrl: https://github.com/0xJacky/nginx-ui/releases/download/v2.1.9/nginx-ui-windows-64.tar.gz
+  InstallerSha256: BFDD4A2D8EBA38B69B39ABDC5155343720070DE88099D29A6027FA612B519AB6
 ManifestType: installer
 ManifestVersion: 1.10.0
